--- a/Cource/Lesson 14/style.css
+++ b/Cource/Lesson 14/style.css
@@ -887,11 +887,11 @@
     font-style: normal;
     font-weight: 400;
     line-height: 140%; /* 28px */
-    width: 470px;
-    height: 56px;
     top: -401px;
     left: 450px;
     position: relative;
+    width: 470px;
+    height: 56px;
 }
 
 .TextInput{
@@ -899,7 +899,7 @@
     align-items: flex-start;
     width: 472px;
     height: 60px;
-    top: -395px;
+    top: -165px;
     left: 792px;
     position: relative;
 }
@@ -908,7 +908,6 @@
     background: var(--Light-Grey, #F9F9F9);
     display: flex;
     width: 341px;
-    height: 60px;
     gap: 10px;
     padding: 17px 159px 15px 32px;
     align-items: center;
@@ -932,13 +931,8 @@
 
 .TextInput .ButtonMedium3{
     background: var(--Dark-Primary, #2A254B);
-    display: flex;
-    align-items: flex-start;
-    gap: 10px;
     width: 131px;
-    height: 60px;
-    padding: 16px, 32px, 16px, 32px;
-    gap: 10px;
+    padding: 16px 32px;
 }
 
 .TextInput .ButtonMedium3 text{
